@@ -5,10 +5,7 @@ import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
-import org.springframework.data.domain.Page;
-import org.springframework.data.domain.PageImpl;
-import org.springframework.data.domain.PageRequest;
-import org.springframework.data.domain.Pageable;
+import org.springframework.data.domain.*;
 import uzumtech.jbooking.dto.request.CitySearchRequest;
 import uzumtech.jbooking.dto.response.CityResponse;
 import uzumtech.jbooking.entity.City;
@@ -20,10 +17,8 @@ import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
 
-import static org.assertj.core.api.Assertions.assertThat;
-import static org.assertj.core.api.Assertions.assertThatThrownBy;
-import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.ArgumentMatchers.eq;
+import static org.assertj.core.api.Assertions.*;
+import static org.mockito.ArgumentMatchers.*;
 import static org.mockito.Mockito.when;
 
 @ExtendWith(MockitoExtension.class)
@@ -73,7 +68,7 @@ class CityServiceImplTest {
     @Test
     void searchCities_shouldReturnPageOfCities() {
         UUID cityId = UUID.randomUUID();
-        CitySearchRequest request = new CitySearchRequest("Tash", null);
+        CitySearchRequest request = new CitySearchRequest("Tash");
         Pageable pageable = PageRequest.of(0, 10);
 
         City city = City.builder()
@@ -86,23 +81,25 @@ class CityServiceImplTest {
 
         Page<City> cityPage = new PageImpl<>(List.of(city), pageable, 1);
 
-        when(cityRepository.searchByNameAndCountry(eq("Tash"), eq(null), any(Pageable.class)))
+        // сервис добавляет % и делает lower()
+        when(cityRepository.findByName(eq("%tash%"), any(Pageable.class)))
                 .thenReturn(cityPage);
+
         when(cityMapper.toResponse(city)).thenReturn(response);
 
         Page<CityResponse> result = cityService.searchCities(request, pageable);
 
         assertThat(result.getContent()).hasSize(1);
-        assertThat(result.getContent().getFirst().name()).isEqualTo("Tashkent");
-        assertThat(result.getContent().getFirst().cityId()).isEqualTo(cityId);
+        assertThat(result.getContent().get(0).name()).isEqualTo("Tashkent");
+        assertThat(result.getContent().get(0).cityId()).isEqualTo(cityId);
     }
 
     @Test
     void searchCities_shouldUseDefaultPageableWhenNull() {
-        CitySearchRequest request = new CitySearchRequest("Tash", null);
+        CitySearchRequest request = new CitySearchRequest("Tash");
         Page<City> emptyPage = Page.empty();
 
-        when(cityRepository.searchByNameAndCountry(eq("Tash"), eq(null), any(Pageable.class)))
+        when(cityRepository.findByName(eq("%tash%"), any(Pageable.class)))
                 .thenReturn(emptyPage);
 
         Page<CityResponse> result = cityService.searchCities(request, null);
@@ -112,11 +109,11 @@ class CityServiceImplTest {
 
     @Test
     void searchCities_shouldCapPageSizeAtMax() {
-        CitySearchRequest request = new CitySearchRequest(null, null);
+        CitySearchRequest request = new CitySearchRequest(null);
         Pageable oversized = PageRequest.of(0, 500);
         Page<City> emptyPage = Page.empty();
 
-        when(cityRepository.searchByNameAndCountry(eq(null), eq(null), any(Pageable.class)))
+        when(cityRepository.findByName(isNull(), any(Pageable.class)))
                 .thenReturn(emptyPage);
 
         Page<CityResponse> result = cityService.searchCities(request, oversized);
